--- a/tasks/templates/task.html
+++ b/tasks/templates/task.html
@@ -6,11 +6,11 @@
     <title>Gestor de tareas</title>
 </head>
 <body>
-    <h1>Mis tareas</h1>
-    <form action="/" method="post">
-        <input type="text" name="title" placeholder="Título">
-        <input type="text" name="desc" placeholder="Descripción">
-        <input type="date" name="date">
+    <h1>Añadir Tarea</h1>
+    <form action="/newtask" method="post">
+        <input required type="text" name="title" placeholder="Título" oninvalid="alert('El campo Título es obligatorio')"/>
+        <input required type="text" name="desc" placeholder="Descripción" oninvalid="alert('El campo Descripción es obligatorio')">
+        <input required type="date" name="date" oninvalid="alert('El campo Fecha es obligatorio')">
         <input type="submit" value="Enviar">
     </form>
 </body>
