--- a/tasks/static/css/styles.css
+++ b/tasks/static/css/styles.css
@@ -1,21 +1,5 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.tasks_table{
-    width: 80%;
-    margin: 12px auto;
-}
-
-nav{
-    margin: 12px 0;
-}
-
-.tasks_table td, .tasks_table th{
-    padding: 10px;
-    border-bottom: 1px solid lightgray;
-}
-
-.tasks_table th{
-    border-color: black;
+.field-error {
+    color: red;
+    font-size: 0.8em;
+    margin-top: -12px;
 }
