--- a/tasks/templates/task.html
+++ b/tasks/templates/task.html
@@ -1,17 +1,37 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gestor de tareas</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title%} Nueva Tarea {% endblock %}
+
+{% block content %}
     <h1>Añadir Tarea</h1>
     <form action="/newtask" method="post">
-        <input required type="text" name="title" placeholder="Título" oninvalid="alert('El campo Título es obligatorio')"/>
-        <input required type="text" name="desc" placeholder="Descripción" oninvalid="alert('El campo Descripción es obligatorio')">
-        <input required type="date" name="date" oninvalid="alert('El campo Fecha es obligatorio')">
-        <input type="submit" value="Enviar">
+        {{ form.hidden_tag() }}
+        <div class="row">
+            <div class="six columns">
+                {{ form.title(class="u-full-width", placeholder="Título") }}
+                {% if form.title.errors %}
+                    {% for error in form.title.errors %}
+                        <p class='field-error'>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div class="six columns">
+                {{ form.date(class="u-full-width", type="date") }}
+                {% if form.date.errors %}
+                    {% for error in form.date.errors %}
+                        <p class='field-error'>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
+            {{ form.description(class="u-full-width", placeholder="Descripción") }}
+            {% if form.description.errors %}
+                {% for error in form.description.errors %}
+                    <p class='field-error'>{{ error }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+        {{ form.submit(class="button-primary") }}
     </form>
-</body>
-</html>
+{% endblock %}}
