--- a/tasks/static/css/skeleton.css
+++ b/tasks/static/css/skeleton.css
@@ -207,7 +207,8 @@ input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
   background-color: #33C3F0;
-  border-color: #33C3F0; }
+  border-color: #33C3F0;
+  margin: 0 0 0 10px; }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
