--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -14,7 +14,7 @@
             </tr>
             {%for item in registros %}
             <tr>
-                <td><input type="radio" name="ix" value="{{loop.index}}"></td>
+                <td><input type="radio" name="ix" value="{{item[3]}}"></td>
                 <td align="CENTER">{{item[0]}}</td>
                 <td align="CENTER">{{item[1]}}</td>
                 <td align="CENTER">{{item[2]}}</td>
