Validacion uno o cero registros BD'

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -14,10 +14,10 @@
             </tr>
             {%for item in registros %}
             <tr>
-                <td><input type="radio" name="ix" value="{{item[3]}}"></td>
-                <td align="CENTER">{{item[0]}}</td>
-                <td align="CENTER">{{item[1]}}</td>
-                <td align="CENTER">{{item[2]}}</td>
+                <td><input type="radio" name="ix" value="{{item['id']}}"></td>
+                <td>{{item['titulo']}}</td>
+                <td>{{item['descripcion']}}</td>
+                <td>{{item['fecha']}}</td>
             </tr>
             {% endfor %}
         </table>
