--- a/tasks/static/css/skeleton.css
+++ b/tasks/static/css/skeleton.css
@@ -207,8 +207,7 @@ input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
   background-color: #33C3F0;
-  border-color: #33C3F0;
-  margin: 0 0 0 10px; }
+  border-color: #33C3F0; }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -329,7 +328,7 @@ pre > code {
 th,
 td {
   padding: 12px 15px;
-  text-align: center;
+  text-align: left;
   border-bottom: 1px solid #E1E1E1; }
 th:first-child,
 td:first-child {
